--- a/html/ex6-1.html
+++ b/html/ex6-1.html
@@ -3,19 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/ex6-1.css">
-    <title>css</title>
+    <link rel="stylesheet" href="../css/ex6-1.css">
+    <title>appleseeds css</title>
 </head>
 <body>
-    <div>
+    <div id="red">
         Hello World
     </div>
     
-    <div>
+    <div id="bold">
         Hello World
     </div>
 
-    <div>
+    <div id="black">
         Hello World
     </div>
 
