--- a/html/tesla.html
+++ b/html/tesla.html
@@ -3,7 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" href="/img/favicon.ico" type="image/gif" sizes="16x16" />
     <link rel="stylesheet" href="../css/tesla.css" />
+    <link rel="stylesheet" href="../css/fonts.css" />
+    <link rel="stylesheet" href="../css/fix.css" />
 
     <!-- Favicons -->
     <link
@@ -11,95 +14,233 @@
       type="image/png"
       href="https://www.tesla.com/themes/custom/tesla_frontend/assets/favicons/apple-touch-icon-114x114.png"
     />
+    <script
+      src="https://kit.fontawesome.com/c1514f61dc.js"
+      crossorigin="anonymous"
+    ></script>
 
     <title>Model 3 | Tesla</title>
   </head>
   <body>
-
-    <div class="model3">
-        <!-- Top nav bar -->
-        <nav id="navbar">
-        
-            <a href="tesla.html" class="logo" title="Tesla, Inc.">
-                <svg
-                xmlns:xlink="http://www.w3.org/1999/xlink"
-                viewBox="0 0 342 35"
-                xmlns="http://www.w3.org/2000/svg"
-                width="100"
-                height="24"
+    <!-- model 3 section -->
+    <section class="model3">
+      <!-- Top nav bar -->
+      <nav id="navbar">
+        <div class="middle-nav">
+          <ol>
+            <li><a href="#">Model S</a></li>
+            <li><a href="#">Model 3</a></li>
+            <li><a href="#">Model X</a></li>
+            <li><a href="#">Model Y</a></li>
+            <li><a href="#">Solar Roof</a></li>
+            <li><a href="#">Solar Panels</a></li>
+          </ol>
+        </div>
+        <div class="right-nav">
+          <ol>
+            <li><a href="#">Shop</a></li>
+            <li><a href="#">Tesla Account</a></li>
+            <li>
+              <a href="#"><i class="fas fa-bars"></i></a>
+            </li>
+          </ol>
+        </div>
+        <div class="left-nav">
+          <a href="tesla.html" class="logo" title="Tesla, Inc.">
+            <svg
+              xmlns:xlink="http://www.w3.org/1999/xlink"
+              viewBox="0 0 342 35"
+              xmlns="http://www.w3.org/2000/svg"
+              width="100"
+              height="24"
             >
-                <path
+              <path
                 d="M0 .1a9.7 9.7 0 007 7h11l.5.1v27.6h6.8V7.3L26 7h11a9.8 9.8 0 007-7H0zm238.6 0h-6.8v34.8H263a9.7 9.7 0 006-6.8h-30.3V0zm-52.3 6.8c3.6-1 6.6-3.8 7.4-6.9l-38.1.1v20.6h31.1v7.2h-24.4a13.6 13.6 0 00-8.7 7h39.9v-21h-31.2v-7h24zm116.2 28h6.7v-14h24.6v14h6.7v-21h-38zM85.3 7h26a9.6 9.6 0 007.1-7H78.3a9.6 9.6 0 007 7zm0 13.8h26a9.6 9.6 0 007.1-7H78.3a9.6 9.6 0 007 7zm0 14.1h26a9.6 9.6 0 007.1-7H78.3a9.6 9.6 0 007 7zM308.5 7h26a9.6 9.6 0 007-7h-40a9.6 9.6 0 007 7z"
                 fill="#fff"
-                ></path>
+              ></path>
             </svg>
-            <!-- <h1 class="logo"><a href="cinema_index.html">ASC</a></h1> -->
-            <ul>
-            <li><a class="current" href="cinema_index.html">Home</a></li>
-            <li><a href="cinema_about.html">About</a></li>
-            <li><a href="cinema_contact.html">Contact</a></li>
-            </ul>
-        </nav>
+          </a>
+        </div>
+      </nav>
 
-        <!-- <div class="arrow bounce"></div> -->
-        <a href="#safety" class="arrow bounce">
-          
-<svg xmlns:xlink="http://www.w3.org/1999/xlink" xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100' preserveAspectRatio='xMidYMid Meet' width="20" height="20"><path d='M100 5.5c0 1.3-.5 2.6-1.5 3.5L50 57.5 1.5 9c-2-2-2-5.1 0-7.1s5.1-2 7.1 0L50 43.4 91.5 1.9c2-2 5.1-2 7.1 0 .9 1 1.4 2.3 1.4 3.6z' fill="#fff"/></svg>
+      <h1 class="heading-primary">Model 3</h1>
+      <div class="container">
+        <div class="feature-box">
+          <h3 class="feature-heading">
+            <i class="fas fa-tachometer-alt"></i>&nbsp; 3.1 s
+          </h3>
+          <p>From 0-60 mph</p>
+        </div>
+        <div class="wl"></div>
+        <div class="feature-box">
+          <h3 class="feature-heading">353mi</h3>
+          <p>Range</p>
+        </div>
+        <div class="wl"></div>
+        <div class="feature-box">
+          <h3 class="feature-heading">AWD</h3>
+          <p>Dual Motor</p>
+        </div>
+        <div class="feature-box">
+          <a href="#" class="btn-white">Order Now</a>
+        </div>
+      </div>
+
+      <a href="#safety" class="arrow bounce">
+        <svg
+          xmlns:xlink="http://www.w3.org/1999/xlink"
+          xmlns="http://www.w3.org/2000/svg"
+          viewBox="0 0 100 100"
+          preserveAspectRatio="xMidYMid Meet"
+          width="20"
+          height="20"
+        >
+          <path
+            d="M100 5.5c0 1.3-.5 2.6-1.5 3.5L50 57.5 1.5 9c-2-2-2-5.1 0-7.1s5.1-2 7.1 0L50 43.4 91.5 1.9c2-2 5.1-2 7.1 0 .9 1 1.4 2.3 1.4 3.6z"
+            fill="#fff"
+          />
+        </svg>
+      </a>
+    </section>
+
+    <!-- safety section -->
+    <section id="safety" class="safety">
+      <div class="logo-pos">
+        <a href="tesla.html" class="logo" title="Tesla, Inc.">
+          <svg
+            xmlns:xlink="http://www.w3.org/1999/xlink"
+            viewBox="0 0 342 35"
+            xmlns="http://www.w3.org/2000/svg"
+            width="100"
+            height="24"
+          >
+            <path
+              d="M0 .1a9.7 9.7 0 007 7h11l.5.1v27.6h6.8V7.3L26 7h11a9.8 9.8 0 007-7H0zm238.6 0h-6.8v34.8H263a9.7 9.7 0 006-6.8h-30.3V0zm-52.3 6.8c3.6-1 6.6-3.8 7.4-6.9l-38.1.1v20.6h31.1v7.2h-24.4a13.6 13.6 0 00-8.7 7h39.9v-21h-31.2v-7h24zm116.2 28h6.7v-14h24.6v14h6.7v-21h-38zM85.3 7h26a9.6 9.6 0 007.1-7H78.3a9.6 9.6 0 007 7zm0 13.8h26a9.6 9.6 0 007.1-7H78.3a9.6 9.6 0 007 7zm0 14.1h26a9.6 9.6 0 007.1-7H78.3a9.6 9.6 0 007 7zM308.5 7h26a9.6 9.6 0 007-7h-40a9.6 9.6 0 007 7z"
+              fill="#000"
+            ></path>
+          </svg>
         </a>
-    </div>
+      </div>
 
-    <div id="safety" class="safety"></div>
-    <div class="performance"></div>
-    <div class="all-wheel"></div>
-    <div class="range"></div>
-    <div class="autopilot"></div>
-    <div class="interior"></div>
-    <div class="specs"></div>
-    <div class="order">
-
-        <!-- Footer -->
-        <Footer></Footer>
-    </div>
-
+      <aside class="leftside"></aside>
+      <aside class="rightside"></aside>
+    </section>
+    <section class="performance"></section>
+    <section class="all-wheel"></section>
+    <section class="range"></section>
+    <section class="autopilot"></section>
+    <section class="interior"></section>
+    <section class="specs"></section>
+    <section class="order">
+      <!-- Footer -->
+      <footer></footer>
+    </section>
 
     <!-- Left side bar -->
-    <ul class="side_nav-container tds-list" style="top: calc(50% - 126px);">
-        <li data-gtm-event="navigation" tabindex="0" data-gtm-location="left nav" data-gtm-drawer="model3" class="side_nav-item side_nav-item--selected" data-title="model3">
-          <div class="side_nav-tab"></div>
-          <div class="side_nav-label" data-button-text="Model 3">Model 3</div>
-        </li>
-        <li data-gtm-event="navigation" tabindex="0" data-gtm-location="left nav" data-gtm-drawer="safety" class="side_nav-item" data-title="safety">
-          <div class="side_nav-tab"></div>
-          <div class="side_nav-label" data-button-text="Safety">Safety</div>
-        </li>
-        <li data-gtm-event="navigation" tabindex="0" data-gtm-location="left nav" data-gtm-drawer="performance" class="side_nav-item" data-title="performance">
-          <div class="side_nav-tab"></div>
-          <div class="side_nav-label" data-button-text="Performance">Performance</div>
-        </li>
-        <li data-gtm-event="navigation" tabindex="0" data-gtm-location="left nav" data-gtm-drawer="all-wheel-drive" class="side_nav-item" data-title="all-wheeldrive">
-          <div class="side_nav-tab"></div>
-          <div class="side_nav-label" data-button-text="All-Wheel Drive">All-Wheel Drive</div>
-        </li>
-        <li data-gtm-event="navigation" tabindex="0" data-gtm-location="left nav" data-gtm-drawer="range" class="side_nav-item" data-title="range">
-          <div class="side_nav-tab"></div>
-          <div class="side_nav-label" data-button-text="Range">Range</div>
-        </li>
-        <li data-gtm-event="navigation" tabindex="0" data-gtm-location="left nav" data-gtm-drawer="autopilot" class="side_nav-item" data-title="autopilot">
-          <div class="side_nav-tab"></div>
-          <div class="side_nav-label" data-button-text="Autopilot">Autopilot</div>
-        </li>
-        <li data-gtm-event="navigation" tabindex="0" data-gtm-location="left nav" data-gtm-drawer="interior" class="side_nav-item" data-title="interior">
-          <div class="side_nav-tab"></div>
-          <div class="side_nav-label" data-button-text="Interior">Interior</div>
-        </li>
-        <li data-gtm-event="navigation" tabindex="0" data-gtm-location="left nav" data-gtm-drawer="specs" class="side_nav-item" data-title="specs">
-          <div class="side_nav-tab"></div>
-          <div class="side_nav-label" data-button-text="Specs">Specs</div>
-        </li>
-        <li data-gtm-event="navigation" tabindex="0" data-gtm-location="left nav" data-gtm-drawer="order" class="side_nav-item" data-title="order">
-          <div class="side_nav-tab"></div>
-          <div class="side_nav-label" data-button-text="Order">Order</div>
-        </li></ul>
-
+    <ul class="side_nav-container tds-list" style="top: calc(50% - 126px)">
+      <li
+        data-gtm-event="navigation"
+        tabindex="0"
+        data-gtm-location="left nav"
+        data-gtm-drawer="model3"
+        class="side_nav-item side_nav-item--selected"
+        data-title="model3"
+      >
+        <div class="side_nav-tab"></div>
+        <div class="side_nav-label" data-button-text="Model 3">Model 3</div>
+      </li>
+      <li
+        data-gtm-event="navigation"
+        tabindex="0"
+        data-gtm-location="left nav"
+        data-gtm-drawer="safety"
+        class="side_nav-item"
+        data-title="safety"
+      >
+        <div class="side_nav-tab"></div>
+        <div class="side_nav-label" data-button-text="Safety">Safety</div>
+      </li>
+      <li
+        data-gtm-event="navigation"
+        tabindex="0"
+        data-gtm-location="left nav"
+        data-gtm-drawer="performance"
+        class="side_nav-item"
+        data-title="performance"
+      >
+        <div class="side_nav-tab"></div>
+        <div class="side_nav-label" data-button-text="Performance">
+          Performance
+        </div>
+      </li>
+      <li
+        data-gtm-event="navigation"
+        tabindex="0"
+        data-gtm-location="left nav"
+        data-gtm-drawer="all-wheel-drive"
+        class="side_nav-item"
+        data-title="all-wheeldrive"
+      >
+        <div class="side_nav-tab"></div>
+        <div class="side_nav-label" data-button-text="All-Wheel Drive">
+          All-Wheel Drive
+        </div>
+      </li>
+      <li
+        data-gtm-event="navigation"
+        tabindex="0"
+        data-gtm-location="left nav"
+        data-gtm-drawer="range"
+        class="side_nav-item"
+        data-title="range"
+      >
+        <div class="side_nav-tab"></div>
+        <div class="side_nav-label" data-button-text="Range">Range</div>
+      </li>
+      <li
+        data-gtm-event="navigation"
+        tabindex="0"
+        data-gtm-location="left nav"
+        data-gtm-drawer="autopilot"
+        class="side_nav-item"
+        data-title="autopilot"
+      >
+        <div class="side_nav-tab"></div>
+        <div class="side_nav-label" data-button-text="Autopilot">Autopilot</div>
+      </li>
+      <li
+        data-gtm-event="navigation"
+        tabindex="0"
+        data-gtm-location="left nav"
+        data-gtm-drawer="interior"
+        class="side_nav-item"
+        data-title="interior"
+      >
+        <div class="side_nav-tab"></div>
+        <div class="side_nav-label" data-button-text="Interior">Interior</div>
+      </li>
+      <li
+        data-gtm-event="navigation"
+        tabindex="0"
+        data-gtm-location="left nav"
+        data-gtm-drawer="specs"
+        class="side_nav-item"
+        data-title="specs"
+      >
+        <div class="side_nav-tab"></div>
+        <div class="side_nav-label" data-button-text="Specs">Specs</div>
+      </li>
+      <li
+        data-gtm-event="navigation"
+        tabindex="0"
+        data-gtm-location="left nav"
+        data-gtm-drawer="order"
+        class="side_nav-item"
+        data-title="order"
+      >
+        <div class="side_nav-tab"></div>
+        <div class="side_nav-label" data-button-text="Order">Order</div>
+      </li>
+    </ul>
   </body>
 </html>
