--- a/html/tesla.html
+++ b/html/tesla.html
@@ -22,8 +22,68 @@
     <title>Model 3 | Tesla</title>
   </head>
   <body>
+    <!-- side nav -->
+    <nav class="sidenav">
+      <ol>
+        <li>
+          <a href="#model3"
+            ><div class="wl-sidenav"></div>
+            Model 3</a
+          >
+        </li>
+        <li>
+          <a href="#safety"
+            ><div class="wl-sidenav"></div>
+            Safety</a
+          >
+        </li>
+        <li>
+          <a href="#performance"
+            ><div class="wl-sidenav"></div>
+            Performance</a
+          >
+        </li>
+        <li>
+          <a href="#all-wheel"
+            ><div class="wl-sidenav"></div>
+            All-Wheel Drive</a
+          >
+        </li>
+        <li>
+          <a href="#range"
+            ><div class="wl-sidenav"></div>
+            Range</a
+          >
+        </li>
+        <li>
+          <a href="#autopilot"
+            ><div class="wl-sidenav"></div>
+            Autopilot</a
+          >
+        </li>
+        <li>
+          <a href="#interior"
+            ><div class="wl-sidenav"></div>
+            Interior</a
+          >
+        </li>
+        <li>
+          <a href="#specs"
+            ><div class="wl-sidenav"></div>
+            Specs</a
+          >
+        </li>
+        <li>
+          <a href="#order"
+            ><div class="wl-sidenav"></div>
+            Order</a
+          >
+        </li>
+      </ol>
+    </nav>
+
     <!-- model 3 section -->
-    <section class="model3">
+    <section id="model3" class="model3">
       <!-- Top nav bar -->
       <nav id="navbar">
         <div class="middle-nav">
@@ -105,142 +165,115 @@
 
     <!-- safety section -->
     <section id="safety" class="safety">
-      <div class="logo-pos">
-        <a href="tesla.html" class="logo" title="Tesla, Inc.">
-          <svg
-            xmlns:xlink="http://www.w3.org/1999/xlink"
-            viewBox="0 0 342 35"
-            xmlns="http://www.w3.org/2000/svg"
-            width="100"
-            height="24"
+      <aside class="leftside">
+        <!-- logo -->
+        <div class="logo-pos">
+          <a href="tesla.html" class="logo" title="Tesla, Inc.">
+            <svg
+              xmlns:xlink="http://www.w3.org/1999/xlink"
+              viewBox="0 0 342 35"
+              xmlns="http://www.w3.org/2000/svg"
+              width="100"
+              height="24"
+            >
+              <path
+                d="M0 .1a9.7 9.7 0 007 7h11l.5.1v27.6h6.8V7.3L26 7h11a9.8 9.8 0 007-7H0zm238.6 0h-6.8v34.8H263a9.7 9.7 0 006-6.8h-30.3V0zm-52.3 6.8c3.6-1 6.6-3.8 7.4-6.9l-38.1.1v20.6h31.1v7.2h-24.4a13.6 13.6 0 00-8.7 7h39.9v-21h-31.2v-7h24zm116.2 28h6.7v-14h24.6v14h6.7v-21h-38zM85.3 7h26a9.6 9.6 0 007.1-7H78.3a9.6 9.6 0 007 7zm0 13.8h26a9.6 9.6 0 007.1-7H78.3a9.6 9.6 0 007 7zm0 14.1h26a9.6 9.6 0 007.1-7H78.3a9.6 9.6 0 007 7zM308.5 7h26a9.6 9.6 0 007-7h-40a9.6 9.6 0 007 7z"
+                fill="#393C41"
+              ></path>
+            </svg>
+          </a>
+        </div>
+        <h2 class="heading-secondary">Safety</h2>
+        <h3 class="heading-tertiary">Build for Safety</h3>
+        <p class="paragraph">
+          Safety is the most important part of the overall Model 3 design. The
+          metal structure is a combination of aluminum and steel, for maximum
+          strength in every area. In a roof-crush test, Model 3 resisted four
+          times its own mass, even with an all-glass roof: that's the same
+          weight as two full-grown African elephants.
+        </p>
+        <div class="rating-box">
+          <h4>5-Star Overall NHTSA Rating</h4>
+          <div class="lefttext">
+            <div class="margin-bottom-small">
+              <h5>Driver</h5>
+              <p class="tinytext">Frontal</p>
+            </div>
+            <div class="margin-bottom-small">
+              <h5>Passenger</h5>
+              <p class="tinytext">Frontal</p>
+            </div>
+            <div class="margin-bottom-small">
+              <h5>Front Seat</h5>
+              <p class="tinytext">Side</p>
+            </div>
+            <div class="margin-bottom-small">
+              <h5>Rear Seat</h5>
+              <p class="tinytext">Side</p>
+            </div>
+            <div class="margin-bottom-small">
+              <h5>Rollover</h5>
+            </div>
+          </div>
+          <div class="righttext">
+            <p>&starf; &starf; &starf; &starf; &starf;</p>
+            <p>&starf; &starf; &starf; &starf; &starf;</p>
+            <p>&starf; &starf; &starf; &starf; &starf;</p>
+            <p>&starf; &starf; &starf; &starf; &starf;</p>
+            <p>&starf; &starf; &starf; &starf; &starf;</p>
+          </div>
+        </div>
+        <div class="margin-top-big">
+          <a href="#" class="btn-plus"
+            ><i class="fas fa-plus-circle fa-2x"></i> Learn More</a
           >
-            <path
-              d="M0 .1a9.7 9.7 0 007 7h11l.5.1v27.6h6.8V7.3L26 7h11a9.8 9.8 0 007-7H0zm238.6 0h-6.8v34.8H263a9.7 9.7 0 006-6.8h-30.3V0zm-52.3 6.8c3.6-1 6.6-3.8 7.4-6.9l-38.1.1v20.6h31.1v7.2h-24.4a13.6 13.6 0 00-8.7 7h39.9v-21h-31.2v-7h24zm116.2 28h6.7v-14h24.6v14h6.7v-21h-38zM85.3 7h26a9.6 9.6 0 007.1-7H78.3a9.6 9.6 0 007 7zm0 13.8h26a9.6 9.6 0 007.1-7H78.3a9.6 9.6 0 007 7zm0 14.1h26a9.6 9.6 0 007.1-7H78.3a9.6 9.6 0 007 7zM308.5 7h26a9.6 9.6 0 007-7h-40a9.6 9.6 0 007 7z"
-              fill="#000"
-            ></path>
-          </svg>
-        </a>
-      </div>
+          <a href="#" class="btn-dark">Order Now</a>
+        </div>
+      </aside>
 
-      <aside class="leftside"></aside>
-      <aside class="rightside"></aside>
+      <aside class="rightside">
+        <!-- return arrow -->
+        <div class="returnarrow-pos">
+          <a href="#model3" class="returnarrow">
+            <svg
+              xmlns:xlink="http://www.w3.org/1999/xlink"
+              xmlns="http://www.w3.org/2000/svg"
+              class="tds-icon tcl-sticky-navigation__icon"
+              viewBox="0 0 100 100"
+              width="20"
+              height="20"
+              aria-label="Jump to top"
+            >
+              <path
+                d="M0 52.5c0-1.3.5-2.6 1.5-3.5L50 .5 98.5 49c2 2 2 5.1 0 7.1s-5.1 2-7.1 0L50 14.6 8.5 56.1c-2 2-5.1 2-7.1 0-.9-1-1.4-2.3-1.4-3.6z"
+                fill="#393C41"
+              ></path>
+            </svg>
+          </a>
+        </div>
+      </aside>
     </section>
-    <section class="performance"></section>
-    <section class="all-wheel"></section>
-    <section class="range"></section>
-    <section class="autopilot"></section>
-    <section class="interior"></section>
-    <section class="specs"></section>
-    <section class="order">
+
+    <section id="performance" class="performance"></section>
+    <section id="all-wheel" class="all-wheel"></section>
+    <section id="range" class="range"></section>
+    <section id="autopilot" class="autopilot"></section>
+    <section id="interior" class="interior"></section>
+    <section id="specs" class="specs"></section>
+    <section id="order" class="order">
       <!-- Footer -->
-      <footer></footer>
+      <footer class="footer">
+        <ol>
+          <li><a href="#">Tesla © 2021</a></li>
+          <li><a href="#">Privacy & Legal</a></li>
+          <li><a href="#">Contact</a></li>
+          <li><a href="#">Careers</a></li>
+          <li><a href="#">Get Newsletter</a></li>
+          <li><a href="#">News</a></li>
+          <li><a href="#">Forums</a></li>
+          <li><a href="#">Locations</a></li>
+        </ol>
+      </footer>
     </section>
-
-    <!-- Left side bar -->
-    <ul class="side_nav-container tds-list" style="top: calc(50% - 126px)">
-      <li
-        data-gtm-event="navigation"
-        tabindex="0"
-        data-gtm-location="left nav"
-        data-gtm-drawer="model3"
-        class="side_nav-item side_nav-item--selected"
-        data-title="model3"
-      >
-        <div class="side_nav-tab"></div>
-        <div class="side_nav-label" data-button-text="Model 3">Model 3</div>
-      </li>
-      <li
-        data-gtm-event="navigation"
-        tabindex="0"
-        data-gtm-location="left nav"
-        data-gtm-drawer="safety"
-        class="side_nav-item"
-        data-title="safety"
-      >
-        <div class="side_nav-tab"></div>
-        <div class="side_nav-label" data-button-text="Safety">Safety</div>
-      </li>
-      <li
-        data-gtm-event="navigation"
-        tabindex="0"
-        data-gtm-location="left nav"
-        data-gtm-drawer="performance"
-        class="side_nav-item"
-        data-title="performance"
-      >
-        <div class="side_nav-tab"></div>
-        <div class="side_nav-label" data-button-text="Performance">
-          Performance
-        </div>
-      </li>
-      <li
-        data-gtm-event="navigation"
-        tabindex="0"
-        data-gtm-location="left nav"
-        data-gtm-drawer="all-wheel-drive"
-        class="side_nav-item"
-        data-title="all-wheeldrive"
-      >
-        <div class="side_nav-tab"></div>
-        <div class="side_nav-label" data-button-text="All-Wheel Drive">
-          All-Wheel Drive
-        </div>
-      </li>
-      <li
-        data-gtm-event="navigation"
-        tabindex="0"
-        data-gtm-location="left nav"
-        data-gtm-drawer="range"
-        class="side_nav-item"
-        data-title="range"
-      >
-        <div class="side_nav-tab"></div>
-        <div class="side_nav-label" data-button-text="Range">Range</div>
-      </li>
-      <li
-        data-gtm-event="navigation"
-        tabindex="0"
-        data-gtm-location="left nav"
-        data-gtm-drawer="autopilot"
-        class="side_nav-item"
-        data-title="autopilot"
-      >
-        <div class="side_nav-tab"></div>
-        <div class="side_nav-label" data-button-text="Autopilot">Autopilot</div>
-      </li>
-      <li
-        data-gtm-event="navigation"
-        tabindex="0"
-        data-gtm-location="left nav"
-        data-gtm-drawer="interior"
-        class="side_nav-item"
-        data-title="interior"
-      >
-        <div class="side_nav-tab"></div>
-        <div class="side_nav-label" data-button-text="Interior">Interior</div>
-      </li>
-      <li
-        data-gtm-event="navigation"
-        tabindex="0"
-        data-gtm-location="left nav"
-        data-gtm-drawer="specs"
-        class="side_nav-item"
-        data-title="specs"
-      >
-        <div class="side_nav-tab"></div>
-        <div class="side_nav-label" data-button-text="Specs">Specs</div>
-      </li>
-      <li
-        data-gtm-event="navigation"
-        tabindex="0"
-        data-gtm-location="left nav"
-        data-gtm-drawer="order"
-        class="side_nav-item"
-        data-title="order"
-      >
-        <div class="side_nav-tab"></div>
-        <div class="side_nav-label" data-button-text="Order">Order</div>
-      </li>
-    </ul>
   </body>
 </html>
