--- a/html/tesla.html
+++ b/html/tesla.html
@@ -254,7 +254,95 @@
       </aside>
     </section>
 
-    <section id="performance" class="performance"></section>
+    <!-- section 3 performance -->
+    <section id="performance" class="performance">
+      <div class="section3_topcontainer">
+        <!-- logo -->
+        <div class="logo-pos">
+          <a href="tesla.html" class="logo" title="Tesla, Inc.">
+            <svg
+              xmlns:xlink="http://www.w3.org/1999/xlink"
+              viewBox="0 0 342 35"
+              xmlns="http://www.w3.org/2000/svg"
+              width="100"
+              height="24"
+            >
+              <path
+                d="M0 .1a9.7 9.7 0 007 7h11l.5.1v27.6h6.8V7.3L26 7h11a9.8 9.8 0 007-7H0zm238.6 0h-6.8v34.8H263a9.7 9.7 0 006-6.8h-30.3V0zm-52.3 6.8c3.6-1 6.6-3.8 7.4-6.9l-38.1.1v20.6h31.1v7.2h-24.4a13.6 13.6 0 00-8.7 7h39.9v-21h-31.2v-7h24zm116.2 28h6.7v-14h24.6v14h6.7v-21h-38zM85.3 7h26a9.6 9.6 0 007.1-7H78.3a9.6 9.6 0 007 7zm0 13.8h26a9.6 9.6 0 007.1-7H78.3a9.6 9.6 0 007 7zm0 14.1h26a9.6 9.6 0 007.1-7H78.3a9.6 9.6 0 007 7zM308.5 7h26a9.6 9.6 0 007-7h-40a9.6 9.6 0 007 7z"
+                fill="#393C41"
+              ></path>
+            </svg>
+          </a>
+        </div>
+        <!-- return arrow -->
+        <div class="returnarrow-pos">
+          <a href="#model3" class="returnarrow">
+            <svg
+              xmlns:xlink="http://www.w3.org/1999/xlink"
+              xmlns="http://www.w3.org/2000/svg"
+              class="tds-icon tcl-sticky-navigation__icon"
+              viewBox="0 0 100 100"
+              width="20"
+              height="20"
+              aria-label="Jump to top"
+            >
+              <path
+                d="M0 52.5c0-1.3.5-2.6 1.5-3.5L50 .5 98.5 49c2 2 2 5.1 0 7.1s-5.1 2-7.1 0L50 14.6 8.5 56.1c-2 2-5.1 2-7.1 0-.9-1-1.4-2.3-1.4-3.6z"
+                fill="#393C41"
+              ></path>
+            </svg>
+          </a>
+        </div>
+        <div class="container">
+          <div class="feature-box">
+            <h3 class="feature-heading">
+              <i class="fas fa-tachometer-alt"></i>&nbsp; 3.1 s
+            </h3>
+            <p>
+              Quickest acceleration—from zero to 60 mph in <br />
+              as little as 3.1 seconds
+            </p>
+          </div>
+          <div class="wl"></div>
+          <div class="feature-box">
+            <h3 class="feature-heading">162mph</h3>
+            <p>
+              Improved handling and aerodynamics allow<br />for a top speed of
+              162 mph
+            </p>
+          </div>
+          <div class="wl"></div>
+          <div class="feature-box">
+            <h3 class="feature-heading">AWD</h3>
+            <p>
+              Dual Motor All-Wheel Drive instantly controls <br />
+              traction and torque, in all weather conditions
+            </p>
+          </div>
+        </div>
+      </div>
+      <div class="section3_bottomcontainer">
+        <div class="lefttext">
+          <h2 class="heading-secondary">Performance</h2>
+          <h3 class="heading-tertiary">Quickest Acceleration</h3>
+          <div class="margin-top-big">
+            <a href="#" class="btn-plus"
+              ><i class="fas fa-plus-circle fa-2x"></i> Learn More</a
+            >
+            <a href="#" class="btn-dark">Order Now</a>
+          </div>
+        </div>
+        <div class="righttext">
+          <p class="paragraph">
+            Model 3 comes with the option of dual motor all-wheel drive,<br />
+            20” Überturbine Wheels and Performance Brakes and lowered suspension
+            for total control, in all weather conditions. And a carbon fiber
+            spoiler improves stability at high speeds, all allowing Model 3 to
+            accelerate from 0-60 mph in as little as 3.1 seconds.
+          </p>
+        </div>
+      </div>
+    </section>
     <section id="all-wheel" class="all-wheel"></section>
     <section id="range" class="range"></section>
     <section id="autopilot" class="autopilot"></section>
