refactor cinema responsive

--- a/html/cinema_index.html
+++ b/html/cinema_index.html
@@ -16,6 +16,11 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="../css/cinema_style.css" />
+    <link
+      rel="stylesheet"
+      media="screen and (max-width:768px)"
+      href="../css/cinema_mobile.css"
+    />
     <title>AppleSeeds Cinema | Welcome</title>
   </head>
   <body>
