--- a/html/cinema_about.html
+++ b/html/cinema_about.html
@@ -10,6 +10,11 @@
     />
     <meta name="keywords" content="hotel,boston hotel,new england hotel" />
     <link rel="stylesheet" href="../css/cinema_style.css" />
+    <link
+      rel="stylesheet"
+      media="screen and (max-width:768px)"
+      href="../css/cinema_mobile.css"
+    />
     <title>AppleSeeds Cinema | About</title>
   </head>
   <body>
