--- a/html/ex15-5.html
+++ b/html/ex15-5.html
@@ -7,14 +7,16 @@
     <title>Appleseeds css</title>
   </head>
   <body>
-    <nav>
-      <ul class="menu">
-        <li class="logo"><a href="#">APPLESEEDS</a></li>
-        <li class="item"><a href="#">Home</a></li>
-        <li class="item"><a href="#">About</a></li>
-        <li class="item"><a href="#">Portfolio</a></li>
-        <li class="item"><a href="#">Contact</a></li>
-      </ul>
+    <nav class="flex-container">
+      <div class="logo"><a href="">Appleseeds</a></div>
+      <div class="items">
+        <ul>
+          <li><a href="">Home</a></li>
+          <li><a href="">About</a></li>
+          <li><a href="">Portfolio</a></li>
+          <li><a href="">Contact</a></li>
+        </ul>
+      </div>
     </nav>
   </body>
 </html>
